# sd-loom

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
issues/: 20_ready_native_sdxl_workflow.md  21_design_spec_audit_command.md
prompts/: example.py
scripts/: pre-commit
sd_loom/: gui.py
sd_loom/core/: __init__.py  cli.py  loader.py  metadata.py  protocol.py  resolve.py  save.py  types.py
sd_loom/nn/: loader.py  unet.py
sd_loom/prompts/: __init__.py
sd_loom/specs/: __init__.py
sd_loom/styles/: __init__.py
sd_loom/workflows/: audit.py  debug.py  info.py  sdxl.py  sdxl_common.py  sdxl_diffusers.py  sdxl_kdiff.py  sdxl_ldm.py  sdxl_raw.py
specs/: example.py  forge-test.json  skirt-tug.json  sweep_params.py  sweep_styles.py
