[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-loom"
version = "0.1.0"
description = "Stable Diffusion framework where everything is Python"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
]

[project.scripts]
loom = "sd_loom.core.cli:main"

[tool.setuptools.packages.find]
include = ["sd_loom*"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
