[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-loom"
version = "0.1.0"
description = "Stable Diffusion framework where everything is Python"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ml = [
    "torch",
    "diffusers",
    "transformers",
    "accelerate",
    "safetensors",
    "peft",
    "compel>=2.0",
    "einops",
]
dev = [
    "mypy>=1.11",
    "pyright>=1.1",
    "ruff>=0.6",
]

[project.scripts]
loom = "sd_loom.core.cli:main"

[tool.setuptools.packages.find]
include = ["sd_loom*"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sd_loom.nn.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "torch",
    "torch.*",
    "diffusers",
    "diffusers.*",
    "transformers",
    "transformers.*",
    "accelerate",
    "accelerate.*",
    "safetensors",
    "safetensors.*",
    "compel",
    "compel.*",
    "einops",
    "einops.*",
    "k_diffusion",
    "k_diffusion.*",
]
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
include = ["sd_loom", "specs"]
exclude = ["sd_loom/nn"]  # ported ldm code, not worth annotating for pyright
reportPrivateImportUsage = "none"  # diffusers re-exports at top level

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
